// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is "object" - create new file with custom file and function names 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/dummyAction'}\\" text=\\"NewCustomSection\\" press=\\"handler.DummyOnAction\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is "object" - create new file with custom file and function names 2`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        DummyOnAction: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is "object" - create new file with custom function name 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.DummyOnAction\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is "object" - create new file with custom function name 2`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        DummyOnAction: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is empty "object" - create new file with default function name 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is empty "object" - create new file with default function name 2`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is object. Append new function to existing js file with absolute position 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/MyExistingAction'}\\" text=\\"NewCustomSection\\" press=\\"handler.onHandleSecondAction\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is object. Append new function to existing js file with absolute position 2`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        },
        onHandleSecondAction: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is object. Append new function to existing js file with position as object 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/MyExistingAction'}\\" text=\\"NewCustomSection\\" press=\\"handler.onHandleSecondAction\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Test property "eventHandler" "eventHandler" is object. Append new function to existing js file with position as object 2`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        },
        onHandleSecondAction: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.84, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "title": "New Custom Section",
        "type": "XMLFragment",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.84, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.84, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.85, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "title": "New Custom Section",
        "type": "XMLFragment",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.85, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.85, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.86, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.86, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.86, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.89, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.89, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.89, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.90, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.90, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.90, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.98, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.98, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.98, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection custom control 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection custom control 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<CustomXML text=\\"\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection different data and not existing target 1`] = `
Object {
  "dummy": Object {
    "options": Object {
      "settings": Object {
        "content": Object {
          "body": Object {
            "sections": Object {
              "DummySection": Object {
                "position": Object {
                  "anchor": "NewDummyFacet",
                  "placement": "Before",
                },
                "template": "sapux.fe.fpm.writer.test.extensions.custom.DummySection",
                "title": "Dummy Section",
              },
            },
          },
        },
      },
    },
  },
  "sample": Object {
    "id": "Default",
    "name": "sap.fe.templates.ObjectPage",
    "options": Object {
      "settings": Object {
        "content": Object {
          "body": Object {
            "sections": Object {
              "ExistingCustomSection": Object {
                "position": Object {
                  "anchor": "IncidentOverviewFacet",
                  "placement": "Before",
                },
                "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
                "title": "Custom Title",
              },
            },
          },
        },
        "entitySet": "RootEntity",
      },
    },
    "type": "Component",
    "viewLevel": 1,
  },
}
`;

exports[`CustomSection generateCustomSection different data and not existing target 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Text text=\\"DummySection\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection no handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection no handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Text text=\\"NewCustomSection\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection no handler, no fs, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection no handler, no fs, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Text text=\\"NewCustomSection\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection with existing handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;
